<resources>
    <string name="app_name">Cento</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="add">Add</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount">Amount *</string>
    <string name="category">Category *</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>